--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -71,6 +71,26 @@
     "mid = sanggeun[(len(sanggeun)+1) // 2] if not(len(sanggeun) % 2) else sanggeun[len(sanggeun) // 2]\n",
     "\n",
     "print(f\"lo : {lo},  hi : {hi},  mid : {mid}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sanggeun[sanggeun.index(mid)-1]"
    ]
   },
   {
@@ -116,7 +136,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for c in cards:"
+    "for c in cards:\n",
+    "    if c < mid:\n",
+    "        hi = sanggeun[sanggeun.index(mid)-1]\n",
+    "    else:\n",
+    "        lo = sanggeun[sanggeun.index(mid)]"
    ]
   },
   {
