--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -75,80 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sanggeun[sanggeun.index(mid)-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def go_to_lower(x, mid):\n",
-    "    \n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[10, 9, -5, 2, 3, 4, 5, -10]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "for c in cards:\n",
     "    new_sanggeun = sanggeun\n",
+    "    \n",
     "    if c < mid:\n",
-    "        new_sanggeun = [x for x in new_sanggeun if x < mid]\n",
-    "        hi = mid\n",
+    "        hi = new_sanggeun[new_sanggeun.index(mid)-1]\n",
     "    else:\n",
-    "        new_sanggeun = [x for x in new_sanggeun if x >= mid]        "
+    "        lo = new_sanggeun[new_sanggeun.index(mid)]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for c in cards:\n",
-    "    if c < mid:\n",
-    "        hi = sanggeun[sanggeun.index(mid)-1]\n",
-    "    else:\n",
-    "        lo = sanggeun[sanggeun.index(mid)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
