--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -79,13 +79,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "lo = sanggeun[0]\n",
+    "hi = sanggeun[-1]\n",
+    "mid = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ans = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for c in cards:\n",
     "    new_sanggeun = sanggeun\n",
     "    \n",
-    "    if c < mid:\n",
-    "        hi = new_sanggeun[new_sanggeun.index(mid)-1]\n",
-    "    else:\n",
-    "        lo = new_sanggeun[new_sanggeun.index(mid)]"
+    "    while lo <= hi:\n",
+    "        if c < mid:            \n",
+    "            hi = new_sanggeun[new_sanggeun.index(mid)-1]\n",
+    "            new_sanggeun = new_sanggeun[: new_sanggeun.index(mid)]\n",
+    "            \n",
+    "        else:\n",
+    "            lo = new_sanggeun[new_sanggeun.index(mid)]\n",
+    "            new_sanggeun = new_sanggeun[new_sanggeun.index(mid) :]\n",
+    "        \n",
+    "        ans = mid\n",
+    "        mid = new_sanggeun[(len(new_sanggeun)+1) // 2] if not(len(new_sanggeun) % 2) else new_sanggeun[len(new_sanggeun) // 2]       "
    ]
   }
  ],
