--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -90,18 +90,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ans = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "for c in cards:\n",
     "    new_sanggeun = sanggeun\n",
-    "    \n",
+    "    ans = 0\n",
     "    while lo <= hi:\n",
     "        if c < mid:            \n",
     "            hi = new_sanggeun[new_sanggeun.index(mid)-1]\n",
