--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -90,6 +90,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ans_list = []\n",
+    "\n",
     "for c in cards:\n",
     "    new_sanggeun = sanggeun\n",
     "    ans = 0\n",
@@ -103,7 +105,9 @@
     "            new_sanggeun = new_sanggeun[new_sanggeun.index(mid) :]\n",
     "        \n",
     "        ans = mid\n",
-    "        mid = new_sanggeun[(len(new_sanggeun)+1) // 2] if not(len(new_sanggeun) % 2) else new_sanggeun[len(new_sanggeun) // 2]       "
+    "        mid = new_sanggeun[(len(new_sanggeun)+1) // 2] if not(len(new_sanggeun) % 2) else new_sanggeun[len(new_sanggeun) // 2]\n",
+    "        \n",
+    "    ans_list.append(ans)"
    ]
   }
  ],
