--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
     "for c in cards:\n",
     "    new_sanggeun = sanggeun\n",
     "    ans = 0\n",
-    "    while lo <= hi:\n",
+    "    while len(new_sanggeun) > 0:\n",
     "        if c < mid:            \n",
     "            hi = new_sanggeun[new_sanggeun.index(mid)-1]\n",
     "            new_sanggeun = new_sanggeun[: new_sanggeun.index(mid)]\n",
