--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,6 +85,9 @@
     "    new_sanggeun = sanggeun\n",
     "    ans = 0\n",
     "    while len(new_sanggeun) > 0:\n",
+    "        \n",
+    "        print(f\"lo:{lo},  hi:{hi},  mid:{mid},  ans:{ans}, len(new_sanggeun):{len(new_sanggeun)}\")\n",
+    "        \n",
     "        if c < mid:            \n",
     "            hi = new_sanggeun[new_sanggeun.index(mid)-1]\n",
     "            new_sanggeun = new_sanggeun[: new_sanggeun.index(mid)]\n",
