More on boj_10815.ipynb

--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -87,6 +87,7 @@
     "    while len(new_sanggeun) > 0:\n",
     "        \n",
     "        print(f\"lo:{lo},  hi:{hi},  mid:{mid},  ans:{ans}, len(new_sanggeun):{len(new_sanggeun)}\")\n",
+    "        print()\n",
     "        \n",
     "        if c < mid:            \n",
     "            hi = new_sanggeun[new_sanggeun.index(mid)-1]\n",
