More on boj_10815.ipynb

--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -178,6 +178,19 @@
    "source": [
     "ans_list"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = int(input())\n",
+    "sanggeun = list(map(int, input().split()))\n",
+    "M = int(input())\n",
+    "cards = list(map(int, input().split()))\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
