More on boj_10815.ipynb

--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -189,7 +189,39 @@
     "sanggeun = list(map(int, input().split()))\n",
     "M = int(input())\n",
     "cards = list(map(int, input().split()))\n",
-    "\n"
+    "\n",
+    "sanggeun.sort()\n",
+    "\n",
+    "lo = sanggeun[0]\n",
+    "hi = sanggeun[-1]\n",
+    "mid = sanggeun[(len(sanggeun)+1) // 2] if not(len(sanggeun) % 2) else sanggeun[len(sanggeun) // 2]\n",
+    "\n",
+    "ans_list = []\n",
+    "\n",
+    "for c in cards:\n",
+    "    new_sanggeun = sanggeun\n",
+    "    ans = 0\n",
+    "    while len(new_sanggeun) >=1:\n",
+    "        \n",
+    "        if c < mid:            \n",
+    "            hi = new_sanggeun[new_sanggeun.index(mid)-1]\n",
+    "            new_sanggeun = new_sanggeun[: new_sanggeun.index(mid)]\n",
+    "            \n",
+    "        else:\n",
+    "            lo = new_sanggeun[new_sanggeun.index(mid)]\n",
+    "            new_sanggeun = new_sanggeun[new_sanggeun.index(mid) :]\n",
+    "        \n",
+    "        mid = new_sanggeun[(len(new_sanggeun)+1) // 2] if not(len(new_sanggeun) % 2) else new_sanggeun[len(new_sanggeun) // 2]\n",
+    "        ans = mid\n",
+    "        \n",
+    "        if len(new_sanggeun) == 1:\n",
+    "            if c == mid:\n",
+    "                ans = 1\n",
+    "            else:\n",
+    "                ans = 0\n",
+    "            break\n",
+    "        \n",
+    "    ans_list.append(ans)"
    ]
   }
  ],
