More on boj_10815.ipynb

--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,27 @@
     "                ans = 0\n",
     "            break\n",
     "        \n",
-    "    ans_list.append(ans)"
+    "    ans_list.append(ans)\n",
+    "    \n",
+    "    for ans in ans_list:\n",
+    "        print(ans, end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 0, 1, 1, 0, 0, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ans_list)"
    ]
   }
  ],
