Right answer for boj_10815

--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -234,6 +234,37 @@
     "for ans in ans_list:\n",
     "    print(ans, end=' ')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 언제쯤 나도 이렇게 하지????"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bisect import bisect_left, bisect_right\n",
+    "\n",
+    "_ = int(input())\n",
+    "cards = list(map(int, input().split()))\n",
+    "_ = int(input())\n",
+    "qry = list(map(int, input().split()))\n",
+    "\n",
+    "ans = []\n",
+    "\n",
+    "for q in qry:\n",
+    "    l = bisect_left(cards, q)\n",
+    "    r = bisect_right(cards, q)\n",
+    "    if cards[l] == q:\n",
+    "        ans.append(1 if r-l else 0)\n",
+    "\n",
+    "print(*ans)"
+   ]
   }
  ],
  "metadata": {
