Right answer for boj_10815

--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -244,14 +244,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 0 1 0 0 0 0\n"
+     ]
+    }
+   ],
    "source": [
     "from bisect import bisect_left, bisect_right\n",
     "\n",
     "_ = int(input())\n",
     "cards = list(map(int, input().split()))\n",
+    "cards.sort()\n",
     "_ = int(input())\n",
     "qry = list(map(int, input().split()))\n",
     "\n",
@@ -260,8 +269,7 @@
     "for q in qry:\n",
     "    l = bisect_left(cards, q)\n",
     "    r = bisect_right(cards, q)\n",
-    "    if cards[l] == q:\n",
-    "        ans.append(1 if r-l else 0)\n",
+    "    ans.append(1 if r-l else 0)\n",
     "\n",
     "print(*ans)"
    ]
