Right answer for boj_10815

--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -273,6 +273,29 @@
     "\n",
     "print(*ans)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bisect import bisect_left\n",
+    "\n",
+    "_ = int(input())\n",
+    "cards = list(map(int, input().split()))\n",
+    "cards.sort()\n",
+    "_ = int(input())\n",
+    "qry = list(map(int, input().split()))\n",
+    "\n",
+    "ans = []\n",
+    "\n",
+    "for q in qry:\n",
+    "    l = bisect_left(cards, q)\n",
+    "    ans.append(1 if cards[l] == q else 0)\n",
+    "\n",
+    "print(*ans)"
+   ]
   }
  ],
  "metadata": {
