Right answer for boj_10815

--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -304,6 +304,40 @@
     "\n",
     "print(*ans)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 0 0 1 1 0 0 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from bisect import bisect_left\n",
+    "\n",
+    "_ = int(input())\n",
+    "cards = list(map(int, input().split()))\n",
+    "cards.sort()\n",
+    "_ = int(input())\n",
+    "qry = list(map(int, input().split()))\n",
+    "\n",
+    "ans = []\n",
+    "\n",
+    "for q in qry:\n",
+    "    l = bisect_left(cards, q)    \n",
+    "    if cards[l] == q:\n",
+    "        ans.append(1)\n",
+    "    else:\n",
+    "        ans.append(0)\n",
+    "\n",
+    "print(*ans)"
+   ]
   }
  ],
  "metadata": {
