--- a/boj_2748.ipynb
+++ b/boj_2748.ipynb
@@ -32,7 +32,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(int(input()))\n",
+    "print(f\"cnt : {cnt}\")"
+   ]
   }
  ],
  "metadata": {
