--- a/boj_2748.ipynb
+++ b/boj_2748.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,18 +22,27 @@
     "    cnt += 1\n",
     "    \n",
     "    if cache[n] == -1:\n",
-    "        cache[n] = cache[n-1] + cache[n-2]\n",
+    "        cache[n] = f(n-1) + f(n-2)\n",
     "    \n",
     "    return cache[n]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unmatched ')' (385103513.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [7]\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f(int(input()))))\u001b[0m\n\u001b[1;37m                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unmatched ')'\n"
+     ]
+    }
+   ],
    "source": [
-    "print(int(input()))\n",
+    "\n",
     "print(f\"cnt : {cnt}\")"
    ]
   }
@@ -45,7 +54,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
   "orig_nbformat": 4
