--- a/boj_2748.ipynb
+++ b/boj_2748.ipynb
@@ -29,15 +29,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unmatched ')' (385103513.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [7]\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f(int(input()))))\u001b[0m\n\u001b[1;37m                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unmatched ')'\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n",
+      "cnt : 185\n"
      ]
     }
    ],
