--- a/boj_2748.ipynb
+++ b/boj_2748.ipynb
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "n = int(input())\n",
     "cache = [-1] * 91\n",
     "cache[0], cache[1] = 0, 1\n",
     "cnt = 0\n",
@@ -24,7 +25,9 @@
     "    if cache[n] == -1:\n",
     "        cache[n] = f(n-1) + f(n-2)\n",
     "    \n",
-    "    return cache[n]"
+    "    return cache[n]\n",
+    "\n",
+    "print(f(n))"
    ]
   },
   {
