--- a/boj_2748.ipynb
+++ b/boj_2748.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2880067194370816120\n"
+     ]
+    }
+   ],
    "source": [
     "n = int(input())\n",
     "cache = [-1] * 91\n",
@@ -47,6 +55,13 @@
    "source": [
     "print(f(int(input())))\n",
     "print(f\"cnt : {cnt}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Bottom-Up : For loops & Tabulation"
    ]
   }
  ],
