--- a/boj_2748.ipynb
+++ b/boj_2748.ipynb
@@ -63,6 +63,22 @@
    "source": [
     "##### Bottom-Up : For loops & Tabulation"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = int(input())\n",
+    "cache = [-1] * 91\n",
+    "cache[0], cache[1] = 0, 1\n",
+    "\n",
+    "for i in range(2, n):\n",
+    "    cache[n] = cache[n-1] + cache[n-2]\n",
+    "    \n",
+    "print(cache[n])"
+   ]
   }
  ],
  "metadata": {
