--- a/boj_2748.ipynb
+++ b/boj_2748.ipynb
@@ -66,15 +66,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2\n"
+     ]
+    }
+   ],
    "source": [
     "n = int(input())\n",
     "cache = [-1] * 91\n",
     "cache[0], cache[1] = 0, 1\n",
     "\n",
-    "for i in range(2, n):\n",
+    "for i in range(2, n+1):\n",
     "    cache[n] = cache[n-1] + cache[n-2]\n",
     "    \n",
     "print(cache[n])"
