--- a/boj_2748.ipynb
+++ b/boj_2748.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
     "cache[0], cache[1] = 0, 1\n",
     "\n",
     "for i in range(2, n+1):\n",
-    "    cache[n] = cache[n-1] + cache[n-2]\n",
+    "    cache[i] = cache[i-1] + cache[i-2]\n",
     "    \n",
     "print(cache[n])"
    ]
