--- a/boj_11057.ipynb
+++ b/boj_11057.ipynb
@@ -16,27 +16,35 @@
     "N, K = map(int, input().split())\n",
     "cache = [[-1] * (N+1) for _ in range(1, N+1)]\n",
     "cnt = 0\n",
-    "\n"
+    "\n",
+    "def bino(N, K):\n",
+    "    global cnt\n",
+    "    cnt += 1\n",
+    "    \n",
+    "    if cache[N][K] == -1:\n",
+    "        cache[N][K] = bino(N-1, K-1) + bino(N-1, K)\n",
+    "        \n",
+    "    return cache[N][K]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(20, 21)"
+       "(20, 21, -1)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(cache), len(cache[0])"
+    "len(cache), len(cache[0]), cache[10][2]"
    ]
   }
  ],
