--- a/boj_11057.ipynb
+++ b/boj_11057.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,9 @@
     "    if cache[K] == -1:\n",
     "        cache[K] = bino(N-1, K-1) + bino(N-1, K)\n",
     "        \n",
-    "    return cache[K]"
+    "    return cache[K]\n",
+    "\n",
+    "print(bino(N, K))"
    ]
   },
   {
