--- a/boj_11057.ipynb
+++ b/boj_11057.ipynb
@@ -9,13 +9,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_11057.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 15>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m         cache[K] \u001b[39m=\u001b[39m bino(N\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, K\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m) \u001b[39m+\u001b[39m bino(N\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, K)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m cache[K]\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mprint\u001b[39m(bino(N, K))\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_11057.ipynb Cell 2\u001b[0m in \u001b[0;36mbino\u001b[1;34m(N, K)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m cnt \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mif\u001b[39;00m cache[K] \u001b[39m==\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     cache[K] \u001b[39m=\u001b[39m bino(N\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, K\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m) \u001b[39m+\u001b[39m bino(N\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, K)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mreturn\u001b[39;00m cache[K]\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_11057.ipynb Cell 2\u001b[0m in \u001b[0;36mbino\u001b[1;34m(N, K)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m cnt \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mif\u001b[39;00m cache[K] \u001b[39m==\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     cache[K] \u001b[39m=\u001b[39m bino(N\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, K\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m) \u001b[39m+\u001b[39m bino(N\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, K)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mreturn\u001b[39;00m cache[K]\n",
+      "    \u001b[1;31m[... skipping similar frames: bino at line 11 (6 times)]\u001b[0m\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_11057.ipynb Cell 2\u001b[0m in \u001b[0;36mbino\u001b[1;34m(N, K)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m cnt \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mif\u001b[39;00m cache[K] \u001b[39m==\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     cache[K] \u001b[39m=\u001b[39m bino(N\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, K\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m) \u001b[39m+\u001b[39m bino(N\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, K)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mreturn\u001b[39;00m cache[K]\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_11057.ipynb Cell 2\u001b[0m in \u001b[0;36mbino\u001b[1;34m(N, K)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mglobal\u001b[39;00m cnt\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m cnt \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mif\u001b[39;00m cache[K] \u001b[39m==\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     cache[K] \u001b[39m=\u001b[39m bino(N\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, K\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m) \u001b[39m+\u001b[39m bino(N\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, K)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W0sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mreturn\u001b[39;00m cache[K]\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "N, K = map(int, input().split())\n",
     "#cache = [[-1] * (N+1) for _ in range(1, N+1)]\n",
     "cache = [-1] * (N+1)\n",
+    "cache[0] = cache[N] = 1\n",
     "cnt = 0\n",
     "\n",
     "def bino(N, K):\n",
