--- a/boj_11057.ipynb
+++ b/boj_11057.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -19,21 +19,17 @@
        " [1, -1, 1],\n",
        " [1, -1, -1, 1],\n",
        " [1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1]]"
+       " [1, -1, -1, -1, -1, 1]]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "N, K = map(int, input().split())\n",
+    "cnt = 0\n",
     "\n",
     "cache = [[-1] * (N+1) for N in range(1, N+1)]\n",
     "\n",
@@ -46,16 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cnt = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,32 +50,73 @@
     "    global cnt\n",
     "    cnt += 1\n",
     "    \n",
-    "    if cache[N][K] == -1:\n",
-    "        cache[N][K] = bino(N-1, K-1) + bino(N-1, K)\n",
+    "    if cache[N-1][K] == -1:\n",
+    "        cache[N-1][K] = bino(N-1, K-1) + bino(N-1, K)\n",
+    "        #print(f\"N : {N},  K : {K}\")\n",
     "    \n",
-    "    return cache[K]"
+    "    return cache[N-1][K]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_11057.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m bino(\u001b[39m10\u001b[39;49m, \u001b[39m3\u001b[39;49m)\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_11057.ipynb Cell 5\u001b[0m in \u001b[0;36mbino\u001b[1;34m(N, K)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mglobal\u001b[39;00m cnt\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m cnt \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mif\u001b[39;00m cache[N][K] \u001b[39m==\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W4sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     cache[N][K] \u001b[39m=\u001b[39m bino(N\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, K\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m) \u001b[39m+\u001b[39m bino(N\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, K)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#W4sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mreturn\u001b[39;00m cache[K]\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bino(N, K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 1],\n",
+       " [1, -1, 1],\n",
+       " [1, -1, -1, 1],\n",
+       " [1, -1, -1, -1, 1],\n",
+       " [1, -1, -1, -1, -1, 1]]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1], [1, -1, 1], [1, -1, 3, 1], [1, -1, -1, -1, 1], [1, -1, -1, -1, -1, 1]]\n"
      ]
     }
    ],
    "source": [
-    "bino(10, 3)"
+    "cache[2][2] = 3\n",
+    "print(cache)\n"
    ]
   }
  ],
