--- a/boj_11057.ipynb
+++ b/boj_11057.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -19,10 +19,329 @@
        " [1, -1, 1],\n",
        " [1, -1, -1, 1],\n",
        " [1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, 1]]"
+       " [1, -1, -1, -1, -1, 1],\n",
+       " [1, -1, -1, -1, -1, -1, 1],\n",
+       " [1, -1, -1, -1, -1, -1, -1, 1],\n",
+       " [1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
+       " [1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
+       " [1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
+       " [1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
+       " [1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
+       " [1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
+       " [1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
+       " [1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
+       " [1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
+       " [1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
+       " [1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
+       " [1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  1],\n",
+       " [1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  1],\n",
+       " [1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  1],\n",
+       " [1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  1],\n",
+       " [1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  1],\n",
+       " [1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  1],\n",
+       " [1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  1],\n",
+       " [1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  1],\n",
+       " [1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  1],\n",
+       " [1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  1],\n",
+       " [1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  1],\n",
+       " [1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  1]]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,14 +354,12 @@
     "\n",
     "for i in range(len(cache)):\n",
     "    for j in range(len(cache[i])):\n",
-    "        cache[i][0] = cache[i][-1] = 1\n",
-    "        \n",
-    "cache"
+    "        cache[i][0] = cache[i][-1] = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,16 +376,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "54627300"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
