--- a/boj_11057.ipynb
+++ b/boj_11057.ipynb
@@ -9,343 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[1, 1],\n",
-       " [1, -1, 1],\n",
-       " [1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
-       " [1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1],\n",
-       " [1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  1],\n",
-       " [1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  1],\n",
-       " [1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  1],\n",
-       " [1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  1],\n",
-       " [1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  1],\n",
-       " [1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  1],\n",
-       " [1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  1],\n",
-       " [1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  1],\n",
-       " [1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  1],\n",
-       " [1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  1],\n",
-       " [1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  1],\n",
-       " [1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  1]]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "N, K = map(int, input().split())\n",
     "cnt = 0\n",
@@ -354,12 +20,25 @@
     "\n",
     "for i in range(len(cache)):\n",
     "    for j in range(len(cache[i])):\n",
-    "        cache[i][0] = cache[i][-1] = 1"
+    "        cache[i][0] = cache[i][-1] = 1\n",
+    "        \n",
+    "def bino(N, K):\n",
+    "    global cnt\n",
+    "    cnt += 1\n",
+    "    \n",
+    "    if cache[N-1][K] == -1:\n",
+    "        cache[N-1][K] = bino(N-1, K-1) + bino(N-1, K)\n",
+    "        #print(f\"N : {N},  K : {K}\")\n",
+    "    \n",
+    "    return cache[N-1][K]\n",
+    "\n",
+    "print(bino(N, K))\n",
+    "print(bino(N, K) % 10007)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,16 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "54627300"
+       "57344583780044832879702134659486243027220259850169317628852668088727781498305894549474369545593587030330833998956570698717897592941240866306636873720682449524189094252226399240307643383034268419374901148088"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
