--- a/boj_11057.ipynb
+++ b/boj_11057.ipynb
@@ -342,6 +342,37 @@
     "print(bino(N, K) % MOD)\n",
     "print(bino(N, K))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for %=: 'list' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_11057.ipynb Cell 13\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#X23sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, i):\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#X23sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m         cache[i][j] \u001b[39m=\u001b[39m cache[i\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][j\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m+\u001b[39m cache[i\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][j]\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#X23sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m         cache \u001b[39m%\u001b[39m\u001b[39m=\u001b[39m MOD\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_11057.ipynb#X23sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mprint\u001b[39m(cache[N][K])\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for %=: 'list' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "N, K = map(int, input().split())\n",
+    "MOD = 10007\n",
+    "cache = [[0] * 1001 for _ in range(1001)]\n",
+    "\n",
+    "for i in range(1001):\n",
+    "    cache[i][0] = cache[i][i] = 1\n",
+    "    for j in range(1, i):\n",
+    "        cache[i][j] = cache[i-1][j-1] + cache[i-1][j]\n",
+    "        cache[i][j] %= MOD\n",
+    "        \n",
+    "print(cache[N][K])"
+   ]
   }
  ],
  "metadata": {
