--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -5,7 +5,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "N = int(input())\n",
+    "cache = [0] * (N+1)\n",
+    "cache[1] = 9 \n",
+    "\n",
+    "def f(n):\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
