More on boj_10844.ipynb

--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -7,8 +7,9 @@
    "outputs": [],
    "source": [
     "N = int(input())\n",
-    "cache = [0] * (N+1)\n",
-    "cache[1] = 9 \n",
+    "cache = [0] * 101\n",
+    "MOD = 1_000_000_000\n",
+    " \n",
     "\n",
     "def f(n):\n",
     "    "
