--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "N = int(input())\n",
     "cache = [0] * 101\n",
-    "MOD = 1_000_000_000\n",
-    " \n",
+    "MOD = 1_000_000_000 \n",
+    "cache[1] = 9\n",
     "\n",
     "def f(n):\n",
     "    "
