More on boj_10844.ipynb

--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "999999996\n"
+     ]
+    }
+   ],
    "source": [
     "N = int(input())\n",
     "cache = [0] * 101\n",
@@ -12,15 +20,32 @@
     "cache[1] = 9\n",
     "\n",
     "def f(n):\n",
-    "    "
+    "    if not cache[n]:\n",
+    "        cache[n] = ((f(n-1) * 2) - 2 ** (n-1)) % MOD\n",
+    "    return cache[n]\n",
+    "\n",
+    "print(f(N))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(17 * 2) - 2 ** (2-1)"
+   ]
   }
  ],
  "metadata": {
@@ -30,7 +55,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
   "orig_nbformat": 4
