--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -53,7 +53,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "MOD = 1_000_000_000\n",
+    "\n",
+    "N = int(input())\n",
+    "cache = [0] * 101\n",
+    "cache[1] = 9\n",
+    "\n",
+    "def f(n):\n",
+    "    for j in range(1, 10):\n",
+    "        if j < 9 and not cache[n]:\n",
+    "            cache[n] = f(n-1) + 1\n",
+    "    return cache[n]\n",
+    "\n",
+    "print(f(N))"
+   ]
   }
  ],
  "metadata": {
