--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -50,9 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "MOD = 1_000_000_000\n",
     "\n",
@@ -61,9 +69,9 @@
     "cache[1] = 9\n",
     "\n",
     "def f(n):\n",
-    "    for j in range(1, 10):\n",
-    "        if j < 9 and not cache[n]:\n",
-    "            cache[n] = f(n-1) + 1\n",
+    "    for j in range(1, 9):\n",
+    "        if not cache[n]:\n",
+    "            cache[n] = f(n-1) + 8\n",
     "    return cache[n]\n",
     "\n",
     "print(f(N))"
