--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -69,9 +69,11 @@
     "cache[1] = 9\n",
     "\n",
     "def f(n):\n",
+    "    cnt = 0\n",
     "    for j in range(1, 9):\n",
     "        if not cache[n]:\n",
-    "            cache[n] = f(n-1) + 8\n",
+    "            cnt += 1\n",
+    "        cache[n] = f(n-1) + cnt\n",
     "    return cache[n]\n",
     "\n",
     "print(f(N))"
