--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -906,9 +906,18 @@
     "N = int(input())\n",
     "cache = [0] * 101\n",
     "cache[1] = 9\n",
+    "cnt = 0\n",
     "\n",
+    "def f(n):\n",
+    "    global cnt\n",
+    "    \n",
+    "    for _ in range(1, 9):\n",
+    "        if not cache[n]:\n",
+    "            cnt += 1\n",
+    "            cache[n] = cnt\n",
+    "        return cache[n]\n",
     "\n",
-    "print(f(N))"
+    "print(cnt)"
    ]
   }
  ],
