--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -50,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n"
+      "25\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
     "    for _ in range(1, 9):\n",
     "        cnt += 1        \n",
     "    if not cache[n]:\n",
-    "        cache[n] = f(n-1) + cnt\n",
+    "        cache[n] = (f(n-1) + cnt - n) * 2\n",
     "        \n",
     "    return cache[n]\n",
     "\n",
