--- a/boj_10844.ipynb
+++ b/boj_10844.ipynb
@@ -50,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25\n"
+      "50\n"
      ]
     }
    ],
@@ -67,14 +67,16 @@
     "N = int(input())\n",
     "cache = [0] * 101\n",
     "cache[1] = 9\n",
+    "cache[2] = 17\n",
     "\n",
     "\n",
     "def f(n):\n",
-    "    cnt = 0    \n",
-    "    for _ in range(1, 9):\n",
-    "        cnt += 1        \n",
-    "    if not cache[n]:\n",
-    "        cache[n] = (f(n-1) + cnt - n) * 2\n",
+    "    cnt = 0\n",
+    "    if n >= 3:    \n",
+    "        for _ in range(1, 9):\n",
+    "            cnt += 1        \n",
+    "        if not cache[n]:\n",
+    "            cache[n] = (f(n-1) + cnt) * 2\n",
     "        \n",
     "    return cache[n]\n",
     "\n",
